add layered navigation

--- a/app/design/frontend/creo/default/template/catalog/product/view.phtml
+++ b/app/design/frontend/creo/default/template/catalog/product/view.phtml
@@ -30,7 +30,9 @@
  * @see Mage_Catalog_Block_Product_View
  * @see Mage_Review_Block_Product_View
  */
+ini_set('display_errors', 1);
 ?>
+sdfdsfdsf
 <?php $_helper = $this->helper('catalog/output'); ?>
 <?php $_product = $this->getProduct(); ?>
 <script type="text/javascript">
