--- a/app/design/frontend/creo/default/template/onestepcheckout/onepage/review/item.phtml
+++ b/app/design/frontend/creo/default/template/onestepcheckout/onepage/review/item.phtml
@@ -22,6 +22,9 @@
             <?php endforeach; ?>
         </dl>
         <?php endif;?>
+        <?php if ($addtInfoBlock = $this->getProductAdditionalInformationBlock()):?>
+            <?php echo $addtInfoBlock->setItem($_item)->toHtml() ?>
+        <?php endif;?>
     </td>
     <td class="a-center"><?php echo $_item->getQty() ?></td>    
     <?php if ($this->helper('tax')->displayCartPriceExclTax() || $this->helper('tax')->displayCartBothPrices()): ?>
