--- a/app/design/frontend/creo/default/template/page/html/topmenu/renderer.phtml
+++ b/app/design/frontend/creo/default/template/page/html/topmenu/renderer.phtml
@@ -169,5 +169,5 @@ $count = 0;?>
         </div>
       </div>
     </li>
-    <li><a href="#">CREATE</a></li>
+    <li><a href="<?php echo  Mage::getModel('catalog/category')->load(47)->getUrl(); ?>">CREATE</a></li>
 
