--- a/skin/frontend/creo/default/custom.css
+++ b/skin/frontend/creo/default/custom.css
@@ -453,6 +453,9 @@
 .select-label {
 	display: none;
 }
+.swatch-attr .select-label {
+	display:inline-block !important;
+	}
 .mp_quickview_icon {
 	background: #eee !important;
 	border-radius: 0px;
