--- a/app/design/frontend/creo/default/layout/layerednav.xml
+++ b/app/design/frontend/creo/default/layout/layerednav.xml
@@ -6,7 +6,8 @@
     <remove name="left"/>
     <block type="layerednav/layer_view" name="layer"  template="layerednav/layer.phtml"/>
     <block type="layerednav/list" name="root">
-        <block type="catalog/product_list" name="product_list" template="catalog/product/list.phtml">
+        <!--<block type="catalog/product_list" name="product_list" template="catalog/product/list.phtml">-->
+		  <block type="catalog/product_list" name="product_list" template="magpassion_quickview/quickview/catalog/product/list.phtml">
             <block type="catalog/product_list_toolbar" name="product_list_toolbar" template="catalog/product/list/toolbar.phtml">
                 <block type="page/html_pager" name="product_list_toolbar_pager"/>
             </block>
@@ -25,7 +26,8 @@
     <remove name="left"/>
     <block type="layerednav/search_layer" name="layer"  template="layerednav/layer.phtml"/>
     <block type="layerednav/list" name="root">
-        <block type="catalog/product_list" name="product_list" template="catalog/product/list.phtml">
+        <!--<block type="catalog/product_list" name="product_list" template="catalog/product/list.phtml">-->
+		  <block type="catalog/product_list" name="product_list" template="magpassion_quickview/quickview/catalog/product/list.phtml">
             <block type="catalog/product_list_toolbar" name="product_list_toolbar" template="catalog/product/list/toolbar.phtml">
                 <block type="page/html_pager" name="product_list_toolbar_pager"/>
             </block>
