--- a/app/design/frontend/creo/default/template/catalog/navigation/left_nav.phtml
+++ b/app/design/frontend/creo/default/template/catalog/navigation/left_nav.phtml
@@ -1,8 +1,8 @@
 <?php
-/*$obj = new Mage_Catalog_Block_Navigation();
+$obj = new Mage_Catalog_Block_Navigation();
 $store_cats = $obj->getStoreCategories();
 $current_cat    = $obj->getCurrentCategory();
-$current_cat    = (is_object($current_cat) ? $current_cat->getName() : '');*/
+$current_cat    = (is_object($current_cat) ? $current_cat->getName() : '');
 
 $_helper= Mage::helper('catalog/category');
 $_category = Mage::registry('current_category');
@@ -21,7 +21,7 @@ $subcategories = Mage::getModel('catalog/category')->getCategories($ids[2]);
 foreach ($subcategories as $cat) {
     if ($cat->getName() == $current_cat) {
 
-        echo '<li><a href="'.$_helper->getCategoryUrl($cat).'"><span>'.$cat->getName()."</span></a></li>\n";
+        echo '<li class="active"><a href="'.$_helper->getCategoryUrl($cat).'"><span>'.$cat->getName()."</span></a></li>\n";
 
     }else
     {
