--- a/app/design/frontend/creo/default/template/catalog/product/list/toolbar.phtml
+++ b/app/design/frontend/creo/default/template/catalog/product/list/toolbar.phtml
@@ -56,14 +56,31 @@
                      <?php endif; ?>
 							<div class="sort-by">
 				                                
-                  <label><?php echo $this->__('Sort By:') ?></label>
+                 <?php /*?> <label><?php echo $this->__('Sort By:') ?></label>
                   <select onchange="setLocation(this.value)" title="<?php echo $this->__('Sort By:') ?>">
                   <?php foreach($this->getAvailableOrders() as $_key=>$_order): ?>
                   <option value="<?php echo $this->getOrderUrl($_key, 'asc') ?>"<?php if($this->isOrderCurrent($_key)): ?> selected="selected"<?php endif; ?>>
                   <?php echo $this->__($_order) ?>
                   </option>
                   <?php endforeach; ?>
-                  </select>
+                  </select><?php */?>
+                  
+                  
+                   <label><?php echo $this->__('Sort By:') ?></label>
+                   
+                  <div class="open-close basic-open-close">
+						<a class="opener" href="#"><?php if($_GET['order']){echo ucfirst($_GET['order']);} else {echo "Position";} ?> </a>
+                   
+                  <ul onchange="setLocation(this.value)" title="<?php echo $this->__('Sort By:') ?>" class="slide js-slide-hidden" style="display: none;">
+                  <?php foreach($this->getAvailableOrders() as $_key=>$_order): ?>
+                  <li<?php if($this->isOrderCurrent($_key)): ?> class="selected"<?php endif; ?>>
+                  <a href="<?php echo $this->getOrderUrl($_key, 'asc') ?>" >
+                  <?php echo $this->__($_order) ?>
+                  </a>
+                  </li>
+                  <?php endforeach; ?>
+                  </ul>
+                  </div>
                                 
                                 <!--<a class="sort-by-switcher" href="#"><i class="icon-sort-alt-down"></i></a>-->
 						<?php if($this->getCurrentDirection() == 'desc'): ?>
