--- a/skin/frontend/creo/default/custom.css
+++ b/skin/frontend/creo/default/custom.css
@@ -920,3 +920,9 @@
   .shipping-area li a:hover::before { background-position: 0 -28px !important;}
   .shipping-area li a:hover { background: none !important; color: #000 !important; background-position:inherit !important; border: 2px solid #ddd !important; cursor:default;}
   .old-price {text-decoration: line-through;}
+ #fme_filters_list dd  { float: left;}
+ .fme_layered_category { display: none !important;}
+ #fme_layered_cat { display: none;}
+ #fme_layered_cat ol { padding: 0;}
+ 
+ #fme_layered_styles  ol li a { font-size: 0px; height: 20px; width:32px;}
