--- a/app/design/frontend/creo/default/template/catalog/product/list/toolbar.phtml
+++ b/app/design/frontend/creo/default/template/catalog/product/list/toolbar.phtml
@@ -54,7 +54,7 @@
                 </p>
             <?php endif; ?>
                      <?php endif; ?>
-							<div class="sort-by">
+							<div class="sort-by sortbyCustom">
 				                                
                  <?php /*?> <label><?php echo $this->__('Sort By:') ?></label>
                   <select onchange="setLocation(this.value)" title="<?php echo $this->__('Sort By:') ?>">
@@ -68,10 +68,10 @@
                   
                    <label><?php echo $this->__('Sort By:') ?></label>
                    
-                  <div class="open-close basic-open-close">
+                  <div class=" sortbycontainer open-close basic-open-close">
 						<a class="opener" href="#"><?php if($_GET['order']){echo ucfirst($_GET['order']);} else {echo "Position";} ?> </a>
                    
-                  <ul onchange="setLocation(this.value)" title="<?php echo $this->__('Sort By:') ?>" class="slide js-slide-hidden" style="display: none;">
+                  <ul onchange="setLocation(this.value)" title="<?php echo $this->__('Sort By:') ?>" class="slide js-slide-hidden sortbyUl" style="display: none;">
                   <?php foreach($this->getAvailableOrders() as $_key=>$_order): ?>
                   <li<?php if($this->isOrderCurrent($_key)): ?> class="selected"<?php endif; ?>>
                   <a href="<?php echo $this->getOrderUrl($_key, 'asc') ?>" >
