--- a/app/design/frontend/creo/default/template/customer/form/forgotpassword.phtml
+++ b/app/design/frontend/creo/default/template/customer/form/forgotpassword.phtml
@@ -35,7 +35,7 @@
    
         <h3><?php echo $this->__('Retrieve your password here') ?></h3>
         <p class="form-instructions"><?php echo $this->__('Please enter your email address below. You will receive a link to reset your password.') ?></p>
-        <span class="required red"><?php echo $this->__('* Required Fields') ?></span>
+        <!--<span class="required red"><?php echo $this->__('* Required Fields') ?></span>-->
        
                 <label for="email_address" class="required"><span class="red">*</span><?php echo $this->__('Email Address') ?></label>
                 
