--- a/app/design/frontend/creo/default/template/customer/form/forgotpassword.phtml
+++ b/app/design/frontend/creo/default/template/customer/form/forgotpassword.phtml
@@ -25,17 +25,16 @@
  */
 ?>
 <div class="row">
-<div class="col col-lg-12 col-md-12 col-sm-12 col-xs-12">
-    <h2><?php echo $this->__('Forgot Your Password?') ?></h2>
-<div class="form-holder">
+<div class="col col-lg-6 col-md-6 col-sm-6 col-xs-12">
+    <?php /*?><h2><?php echo $this->__('Forgot Your Password?') ?></h2><?php */?>
+<div class="form-holder login-sec forgot-sec">
     <div class="form-frame">
 <?php echo $this->getMessagesBlock()->toHtml() ?>
 
 <form action="<?php echo $this->getUrl('*/*/forgotpasswordpost') ?>" method="post" id="form-validate">
    
         <h3><?php echo $this->__('Retrieve your password here') ?></h3>
-        <p class="form-instructions"><?php echo $this->__('Please enter your email address below. You will receive a link to reset your password.') ?></p>
-        <span class="required red"><?php echo $this->__('* Required Fields') ?></span>
+        <?php /*?><p class="form-instructions"><?php echo $this->__('Please enter your email address below. You will receive a link to reset your password.') ?></p><?php */?>
        
                 <label for="email_address" class="required"><span class="red">*</span><?php echo $this->__('Email Address') ?></label>
                 
@@ -44,9 +43,9 @@
             
             <?php echo $this->getChildHtml('form.additional.info'); ?>
        
-   
+   <span class="required red"><?php echo $this->__('* Required Fields') ?></span>
     <div class="submit-holder">
-        <p class="back-link"><a href="<?php echo $this->helper('customer')->getLoginUrl() ?>"><small>&laquo; </small><?php echo $this->__('Back to Login') ?></a></p>
+        <?php /*?><p class="back-link"><a href="<?php echo $this->helper('customer')->getLoginUrl() ?>"><small>&laquo; </small><?php echo $this->__('Back to Login') ?></a></p><?php */?>
         <button type="submit" title="<?php echo $this->__('Submit') ?>" class="button"><span><span><?php echo $this->__('Submit') ?></span></span></button>
     </div>
 </form>
