--- a/app/design/frontend/creo/default/layout/local.xml
+++ b/app/design/frontend/creo/default/layout/local.xml
@@ -205,5 +205,14 @@
             <!--<block type="checkout/onepage_success" name="checkout.success" template="checkout/success.phtml"/>-->
         </reference>
     </onestepcheckout_index_success>
+	
+ <customer_account_login translate="label">
+	  <label>Customer Account Registration Form</label>
+	  <!-- Mage_Customer 
+	  <remove name="right"/>
+	  <remove name="left"/>-->
+	  <update handle="customer_account_create"/> 
+	  <update handle="customer_account_forgotpassword"/>   
+ </customer_account_login>
 
 </layout>
