--- a/app/design/frontend/creo/default/template/customer/form/register.phtml
+++ b/app/design/frontend/creo/default/template/customer/form/register.phtml
@@ -34,7 +34,7 @@
 
 <div class="account-create">
     <div class="page-title">
-        <h1><?php echo $this->__('Create an Account') ?></h1>
+        <h1><?php echo $this->__('LOGIN OR CREATE AN ACCOUNT') ?></h1>
     </div>
     <?php echo $this->getChildHtml('form_fields_before')?>
     <?php echo $this->getMessagesBlock()->toHtml() ?>
