--- a/app/design/frontend/creo/default/template/customer/widget/name.phtml
+++ b/app/design/frontend/creo/default/template/customer/widget/name.phtml
@@ -61,7 +61,8 @@ For checkout/onepage/shipping.phtml:
         </div>
     </div>
 <?php endif; ?>
-    <div class="field name-firstname">
+<div class="row">
+    <div class="field name-firstname col">
         <label for="<?php echo $this->getFieldId('firstname')?>" class="required"><em>*</em><?php echo $this->getStoreLabel('firstname') ?></label>
         <div class="input-box">
             <input type="text" id="<?php echo $this->getFieldId('firstname')?>" name="<?php echo $this->getFieldName('firstname')?>" value="<?php echo $this->escapeHtml($this->getObject()->getFirstname()) ?>" title="<?php echo $this->getStoreLabel('firstname') ?>" maxlength="255" class="input-text <?php echo $this->helper('customer/address')->getAttributeValidationClass('firstname') ?>" <?php echo $this->getFieldParams() ?> />
@@ -76,7 +77,7 @@ For checkout/onepage/shipping.phtml:
         </div>
     </div>
 <?php endif; ?>
-    <div class="field name-lastname">
+    <div class="field name-lastname col">
         <label for="<?php echo $this->getFieldId('lastname')?>" class="required"><em>*</em><?php echo $this->getStoreLabel('lastname') ?></label>
         <div class="input-box">
             <input type="text" id="<?php echo $this->getFieldId('lastname')?>" name="<?php echo $this->getFieldName('lastname')?>" value="<?php echo $this->escapeHtml($this->getObject()->getLastname()) ?>" title="<?php echo $this->getStoreLabel('lastname') ?>" maxlength="255" class="input-text <?php echo $this->helper('customer/address')->getAttributeValidationClass('lastname') ?>" <?php echo $this->getFieldParams() ?> />
@@ -98,4 +99,5 @@ For checkout/onepage/shipping.phtml:
         </div>
     </div>
 <?php endif; ?>
+</div>
 </div>
