--- a/app/design/frontend/creo/default/layout/local.xml
+++ b/app/design/frontend/creo/default/layout/local.xml
@@ -214,5 +214,17 @@
      <action method="addCss"><stylesheet>style404.css</stylesheet></action>
  </reference>
 	 </cms_index_noroute>
+	 
+	 
+  <customer_account_login translate="label">
+  <label>Customer Account Registration Form</label>
+  <!-- Mage_Customer 
+  <remove name="right"/>
+  <remove name="left"/>-->
+  <update handle="customer_account_create"/> 
+  <update handle="customer_account_forgotpassword"/>   
+ </customer_account_login>
+	 
+	 
 
 </layout>
