--- a/app/design/frontend/creo/default/template/checkout/cart/minicart/default.phtml
+++ b/app/design/frontend/creo/default/template/checkout/cart/minicart/default.phtml
@@ -191,7 +191,34 @@
       </a>
       <?php endif; ?>
     </h2>
-    <span class="price">
+    <?php if ($_options = $this->getOptionList()):?>
+
+
+          <ul class="minicartInnerUl">
+                <?php foreach ($_options as $_option) : ?>
+                
+                <li>
+                <label> <?php echo $this->escapeHtml($_option['label']) ?> </label>
+                <span>
+                    <?php if (is_array($_option['value'])): ?>
+                    <?php echo nl2br(implode("\n", $_option['value'])) ?>
+                    <?php else: ?>
+                    <?php echo $_option['value'] ?>
+                    <?php endif; ?>
+                    </span>
+                </li>
+                <?php endforeach; ?>
+         
+        
+       
+       
+        <?php endif; ?>
+        <li>
+        <label> Qty </label>
+        <span> <?php echo $this->getQty()?> </span>
+        </li>
+        </ul>
+    <span class="price"><label>Price</label>
     <?php if ($canApplyMsrp): ?>
     <span class="map-cart-sidebar-item"><?php echo $this->__('See price before order confirmation.'); ?></span>
     <?php else: ?>
@@ -286,31 +313,5 @@
   
        
 		 
-		 <?php if ($_options = $this->getOptionList()):?>
-
-
-          <ul class="minicartInnerUl">
-                <?php foreach ($_options as $_option) : ?>
-                
-                <li>
-                <label> <?php echo $this->escapeHtml($_option['label']) ?> </label>
-                <span>
-                    <?php if (is_array($_option['value'])): ?>
-                    <?php echo nl2br(implode("\n", $_option['value'])) ?>
-                    <?php else: ?>
-                    <?php echo $_option['value'] ?>
-                    <?php endif; ?>
-                    </span>
-                </li>
-                <?php endforeach; ?>
-         
-        
-       
-       
-        <?php endif; ?>
-        <li>
-        <label> Qty </label>
-        <span> <?php echo $this->getQty()?> </span>
-        </li>
-        </ul>
+		 
 </li>
