--- a/app/design/frontend/creo/default/template/page/html/header.phtml
+++ b/app/design/frontend/creo/default/template/page/html/header.phtml
@@ -47,7 +47,12 @@
 			        </div>
 			     <div class="col right-area col-lg-6 col-md-6 col-sm-6 col-xs-6">
 			            <div class="open-close cart">
-							<a href="javascript:void(0)" class="opener">My Cart</a>
+							<a href="javascript:void(0)" class="opener"><span class="count">
+								<?php 
+                        $_cartQty = Mage::getSingleton('checkout/cart')->getItemsCount();
+                        echo $_cartQty;
+                        ?>
+                     </span>My Cart</a>
                      <?php echo $this->getChildHtml('minicart_head'); ?>
 							<!--<div class="slide js-slide-hidden">
 								<div class="product">
